# docs/swagger/swagger.json
@@ -2740,7 +2740,7 @@
                 "fullName",
                 "login",
                 "password",
-                "roleIDs"
+                "permissionIDs"
             ],
             "properties": {
                 "email": {
@@ -2758,7 +2758,7 @@
                 "password": {
                     "type": "string"
                 },
-                "roleIDs": {
+                "permissionIDs": {
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -2773,7 +2773,7 @@
                 "fullName",
                 "id",
                 "login",
-                "roleIDs"
+                "permissionIDs"
             ],
             "properties": {
                 "email": {
@@ -2791,7 +2791,7 @@
                 "login": {
                     "type": "string"
                 },
-                "roleIDs": {
+                "permissionIDs": {
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -2917,7 +2917,7 @@
                 "Name": {
                     "type": "string"
                 },
-                "RoleIDs": {
+                "PermissionIDs": {
                     "type": "array",
                     "items": {
                         "type": "integer"
